--- a/package.json
+++ b/package.json
@@ -9,12 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.0.1",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.6",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.3",
-    "react-native-maps": "^1.3.2"
+    "react-dom": "18.2.0",
+    "react-native": "0.71.4",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-maps": "1.3.2",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-web": "~0.18.10",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4",
+    "rn-sliding-up-panel": "^2.4.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
