--- a/package.json
+++ b/package.json
@@ -10,21 +10,24 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
-    "expo": "~48.0.6",
+    "expo": "^48.0.9",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.4",
+    "react-native": "^0.71.4",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-maps": "1.3.2",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-snap-carousel": "^3.9.1",
+    "react-native-snap-carousel": "^1.3.1",
+    "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.10",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
