--- a/package.json
+++ b/package.json
@@ -28,12 +28,10 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-snap-carousel": "^1.3.1",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.10",
     "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4",
-    "rn-sliding-up-panel": "^2.4.6"
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
