--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "itusk-app",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
-
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -24,20 +23,20 @@
       "!**/jest.setup.js"
     ]
   },
-
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-native-community/geolocation": "^3.0.5",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-firebase/app": "^17.4.1",
-    "@react-native-firebase/messaging": "^17.4.1",
+    "@react-native-firebase/app": "^17.4.2",
+    "@react-native-firebase/messaging": "^17.4.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "expo": "^48.0.9",
     "expo-status-bar": "~1.4.4",
+    "jest": "^29.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.6",
@@ -50,8 +49,7 @@
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.10",
     "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4",
-    "jest": "^29.2.1"
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
